--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "license": "MIT",
   "engines": {
-    "node": "12.16.2"
+    "node": ">=12.16.2"
   },
   "main": "src/nginxconfig/mount.js",
   "scripts": {
