--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "clipboard": "^2.0.6",
     "clone": "^2.1.2",
     "do-bulma": "git+https://github.com/do-community/do-bulma.git",
+    "do-vue": "git+https://github.com/do-community/do-vue.git",
     "escape-html": "^1.0.3",
     "files-diff": "0.0.4",
     "json-to-pretty-yaml": "^1.2.2",
